// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parameter-description return errors if operation level parameter description is missing 1`] = `
Array [
  Object {
    "code": "parameter-description",
    "message": "paths./todos.get.parameters.0.description is not truthy",
    "path": Array [
      "paths",
      "/todos",
      "get",
      "parameters",
      0,
      "description",
    ],
    "range": Object {
      "end": Object {
        "character": 29,
        "line": 9,
      },
      "start": Object {
        "character": 10,
        "line": 6,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Parameter objects should have a \`description\`.",
  },
]
`;

exports[`parameter-description return errors if shared level parameter description is missing 1`] = `
Array [
  Object {
    "code": "parameter-description",
    "message": "parameters.limit.description is not truthy",
    "path": Array [
      "parameters",
      "limit",
      "description",
    ],
    "range": Object {
      "end": Object {
        "character": 23,
        "line": 6,
      },
      "start": Object {
        "character": 12,
        "line": 3,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Parameter objects should have a \`description\`.",
  },
]
`;

exports[`parameter-description return errors if top level path parameter description is missing 1`] = `
Array [
  Object {
    "code": "parameter-description",
    "message": "paths./todos.parameters.0.description is not truthy",
    "path": Array [
      "paths",
      "/todos",
      "parameters",
      0,
      "description",
    ],
    "range": Object {
      "end": Object {
        "character": 27,
        "line": 8,
      },
      "start": Object {
        "character": 8,
        "line": 5,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Parameter objects should have a \`description\`.",
  },
]
`;
